--- a/source/changelogs/v4.2.2.rst
+++ b/source/changelogs/v4.2.2.rst
@@ -25,7 +25,7 @@ Changes
 
 - Fixed: ``BaseBuilder::increment()`` and ``BaseBuilder::decrement()`` do not reset the ``BaseBuilder`` state after a query.
 - Now ``CLIRequest::isCLI()`` always returns true.
-- Now ``IncommingRequest::isCLI()`` always return false.
+- Now ``IncommingRequest::isCLI()`` always returns false.
 
 Deprecations
 ************
