docs: add changelog and note

--- a/source/changelogs/v4.2.3.rst
+++ b/source/changelogs/v4.2.3.rst
@@ -17,7 +17,7 @@ none.
 Enhancements
 ************
 
-none.
+- Now ``Security::generateHash()`` is public, and can be used to regenerate CSRF token manually when ``Config\Security::$regenerate`` is false.
 
 Changes
 *******
