add : add a description to the changelog in v4.2.5.

--- a/source/changelogs/v4.2.5.rst
+++ b/source/changelogs/v4.2.5.rst
@@ -14,6 +14,7 @@ BREAKING
 
 - The method signature of ``BaseConnection::tableExists()`` has been changed. A second optional parameter ``$cached`` was added. This directs whether to use cache data or not. Default is ``true``, use cache data.
 - The abstract method signature of ``BaseBuilder::_listTables()`` has been changed. A second optional parameter ``$tableName`` was added. Providing a table name will generate SQL listing only that table.
+- The method signature of ``Validation.php::processRules()`` and ``Validation.php::getErrorMessage()`` have been changed. Both of these methods add new ``$originalField`` parameter.
 
 Enhancements
 ************
