Fix: The subquery adds a prefix for the table alias.

--- a/source/changelogs/v4.2.5.rst
+++ b/source/changelogs/v4.2.5.rst
@@ -32,5 +32,6 @@ none.
 
 Bugs Fixed
 **********
+- When using subqueries in the main query, prefixes are added to the table alias.
 
 See the repo's `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_ for a complete list of bugs fixed.
