docs: add changelog

--- a/source/changelogs/v4.3.0.rst
+++ b/source/changelogs/v4.3.0.rst
@@ -67,6 +67,7 @@ Others
 - Now ``spark routes`` command shows route names. See :ref:`URI Routing <routing-spark-routes>`.
 - Added new :ref:`entities-property-casting` class ``IntBoolCast`` for Entity.
 - Help information for a spark command can now be accessed using the ``--help`` option (e.g. ``php spark serve --help``)
+- Added new Form helper function :php:func:`validation_errors()`, :php:func:`validation_list_errors()` and :php:func:`validation_show_error()` to display Validation Errors.
 
 Changes
 *******
