docs: add deprecation of Cookie::withNeverExpiring()

--- a/source/changelogs/v4.2.6.rst
+++ b/source/changelogs/v4.2.6.rst
@@ -27,7 +27,7 @@ none.
 Deprecations
 ************
 
-none.
+- :php:meth:`CodeIgniter\\Cookie\\Cookie::withNeverExpiring()` is deprecated.
 
 Bugs Fixed
 **********
