--- a/source/changelogs/v4.3.0.rst
+++ b/source/changelogs/v4.3.0.rst
@@ -12,6 +12,9 @@ Release Date: Unreleased
 BREAKING
 ********
 
+- The data structure returned by ``BaseConnection::getForeignKeyData()`` has been changed.
+- The naming of foreign keys in has changed in all DBMS except OCI8. The previous suffix of ``_foreign`` has changed to ``_fk``.
+
 Behavior Changes
 ================
 
@@ -117,6 +120,7 @@ Database
 - ``BaseConnection::escape()`` now excludes the ``RawSql`` data type. This allows passing SQL strings into data.
 - The new method ``Forge::dropPrimaryKey()`` allows dropping the primary key on a table. See :ref:`dropping-a-primary-key`.
 - Improved the SQL structure for ``Builder::updateBatch()``. See :ref:`update-batch` for the details.
+- Improved data returned by ``BaseConnection::getForeignKeyData()``. All DBMS return the same structure and use the same naming conventions.
 
 Model
 =====
