--- a/source/changelogs/v4.0.0.rst
+++ b/source/changelogs/v4.0.0.rst
@@ -5,7 +5,12 @@ Release Date: February 24, 2020
 
 **4.0 release of CodeIgniter4**
 
-Enhancements:
+.. contents::
+    :local:
+    :depth: 2
+
+Enhancements
+------------
 
 - Updated welcome view file
 - Debug Toolbar now supports dark mode
@@ -17,7 +22,8 @@ Enhancements:
 - New :php:func:`model()` helper method for easy singleton Models.
 - Tests completely reorganized to make app-level tests simpler out of the box.
 
-Repo changes:
+Repo Changes
+------------
 
 The devstarter repo has been deprecated.
 
