When/WhenNot methods for db in a trait (#6574)
* Added when and whenNot functions to db builder, through a trait.

* Apply suggestions from code review

Co-authored-by: MGatner <mgatner@icloud.com>
Co-authored-by: kenjis <kenji.uui@gmail.com>

* Apply suggestions from code review

Co-authored-by: kenjis <kenji.uui@gmail.com>

* Update system/Traits/ConditionalTrait.php

Co-authored-by: John Paul E. Balandan, CPA <51850998+paulbalandan@users.noreply.github.com>

* Update docblocks

* Stan fixes

* docs: fix mistake when `git rebase`

Co-authored-by: MGatner <mgatner@icloud.com>
Co-authored-by: kenjis <kenji.uui@gmail.com>
Co-authored-by: John Paul E. Balandan, CPA <51850998+paulbalandan@users.noreply.github.com>

--- a/source/changelogs/v4.3.0.rst
+++ b/source/changelogs/v4.3.0.rst
@@ -126,6 +126,7 @@ Database
 - Improved the SQL structure for ``Builder::updateBatch()``. See :ref:`update-batch` for the details.
 - Improved data returned by ``BaseConnection::getForeignKeyData()``. All DBMS returns the same structure.
 - ``Forge::addForeignKey()`` now includes a name parameter to manual set foreign key names. Not supported in SQLite3.
+- Added ``when()`` and ``whenNot()`` methods to conditionally add clauses to the query. See :ref:`BaseBuilder::when() <db-builder-when>` for details.
 
 Model
 =====
